<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".health.WaterFragment"
    android:background="@drawable/login_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/weight_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="@dimen/margin_sixteen"
            android:background="@color/chocolate"
            android:gravity="center"
            android:digits="0123456789."
            android:hint="@string/str_weight"
            android:importantForAutofill="no"
            android:inputType="number" />

        <EditText
            android:id="@+id/gender_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/saddlebrown"
            android:layout_marginTop="@dimen/margin_sixteen"
            android:gravity="center"
            android:hint="@string/str_gender"
            android:importantForAutofill="yes"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:backgroundTint="@color/peru"
            android:layout_marginTop="@dimen/margin_sixteen"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.MaterialComponents.MaterialCalendar.Day"
            android:text="@string/str_button"/>

        <TextView
            android:id="@+id/water_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_sixteen"
            android:fontFamily="@font/acme"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size_thirty"
            android:layout_marginBottom="20sp"
            tools:text="20" />

        <TextView
            android:id="@+id/glass_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:textColor="@color/brown"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="@dimen/text_size_thirty"
            android:layout_marginBottom="20sp"
            tools:text="20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/water_about1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="5sp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/water_about2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="5sp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/water_about3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/water_about4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="5sp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/water_about5"/>

    </LinearLayout>

</RelativeLayout>