<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@drawable/login_background"
    tools:context=".health.CalorieFragment">

    <EditText
        android:id="@+id/weight_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:background="@color/chocolate"
        android:gravity="center"
        android:digits="0123456789."
        android:hint="@string/str_weight"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/height_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/peru"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:gravity="center"
        android:digits="0123456789"
        android:hint="@string/str_height2"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/age_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/olivedrab"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:gravity="center"
        android:digits="0123456789"
        android:hint="@string/str_age"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/gender_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/darkGreen"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:gravity="center"
        android:hint="@string/str_gender"
        android:importantForAutofill="yes"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/brown"
        android:layout_marginTop="@dimen/margin_sixteen"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.MaterialComponents.MaterialCalendar.Day"
        android:text="@string/str_button"/>

    <TextView
        android:id="@+id/calorie_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:fontFamily="@font/acme"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_thirty"
        tools:text="20" />


</LinearLayout>