<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:background="@color/white"
    tools:context=".health.BmiFragment">

    <EditText
        android:id="@+id/weight_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:background="@color/chocolate"
        android:gravity="center"
        android:digits="0123456789."
        android:hint="@string/str_weight"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/height_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/peru"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:gravity="center"
        android:digits="0123456789."
        android:hint="@string/str_height"
        android:importantForAutofill="no"
        android:inputType="number" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_sixteen"
        app:shapeAppearance="@style/ShapeAppearanceOverlay.MaterialComponents.MaterialCalendar.Day"
        android:text="@string/str_button"/>

    <TextView
        android:id="@+id/bmi_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_sixteen"
        android:fontFamily="@font/acme"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_thirty"
        tools:text="20" />

    <ImageView
        android:id="@+id/bmi_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_sixteen"
        tools:srcCompat="@drawable/healthy"
        android:contentDescription="@string/str_image_desc" />

</LinearLayout>