<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exercise.StartFragment"
    android:background="@drawable/login_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="30dp"
            android:id="@+id/bmi_button"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/bmi_button"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:background="@drawable/rounded_bmi_select" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="30dp"
            android:id="@+id/water_button"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/water_button"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:background="@drawable/rounded_water_select" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="30dp"
            android:id="@+id/calorie_button"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/calorie_button"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:background="@drawable/rounded_calorie_select" />

    </LinearLayout>

</RelativeLayout>