<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".exercise.ExerciseFragment" android:id="@+id/frameLayout"
    android:background="@color/white">

    <pl.droidsonroids.gif.GifImageView
            android:layout_width="300dp"
            android:layout_height="300dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:id="@+id/exercise_image_view" tools:src="@drawable/exercise_one"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
            android:id="@+id/exercise_text_view" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/exercise_image_view" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent" android:padding="8dp"
            android:textSize="30sp" tools:text="@string/exercise_text_view_tools"/>
    <Button
        android:text="@string/next_button_string"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:id="@+id/next_button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
    <Button
        android:text="@string/exit_button_string"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:id="@+id/exit_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <!-- TODO: Update blank fragment layout -->

</androidx.constraintlayout.widget.ConstraintLayout>